[project]
name = "mamba-autoresearch"
version = "0.1.0"
description = "Autonomous Mamba-2 pretraining research"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "requests>=2.32",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.4",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
